--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "moka-py"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -9,5 +9,6 @@ name = "moka_py"
 crate-type = ["cdylib"]
 
 [dependencies]
+mimalloc = "0.1.43"
 moka = { version = "0.12.8", features = ["sync"] }
 pyo3 = "0.22.0"
