--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "moka-py"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,3 +12,7 @@ crate-type = ["cdylib"]
 ahash = "0.8.11"
 moka = { version = "0.12.8", features = ["sync"] }
 pyo3 = "0.23.1"
+
+[profile.release]
+lto = true
+codegen-units = 1
