--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "moka-py"
-version = "0.1.10"
+version = "0.1.11"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,8 +11,10 @@ crate-type = ["cdylib"]
 [dependencies]
 ahash = "0.8.11"
 moka = { version = "0.12.8", features = ["sync"] }
-pyo3 = "0.23.1"
+pyo3 = "0.23.2"
 
 [profile.release]
 lto = true
 codegen-units = 1
+panic = "abort"
+strip = "symbols"
