--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+
 [tool.maturin]
 features = ["pyo3/extension-module"]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
   "maturin>=1.8.1",
   "pytest-asyncio>=0.24.0",
   "pytest-benchmark>=5.1.0",
