--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dev = [
   "pytest-asyncio>=0.24.0",
   "pytest-benchmark>=5.1.0",
   "pytest>=8.3.3",
+  "ruff>=0.12.12",
 ]
 
 [tool.pytest.ini_options]
@@ -42,3 +43,42 @@ addopts = "--doctest-modules --doctest-continue-on-failure"
 doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
+
+[tool.ruff]
+line-length = 100
+target-version = "py39"
+
+[tool.ruff.lint]
+select = [
+  "E",
+  "F",
+  "I",
+  "UP",
+  "B",
+  "C4",
+  "SIM",
+  "ISC",
+  "D",
+  "S",
+  "RUF",
+  "C90",
+]
+ignore = [
+  "E501", # line length handled by formatter
+]
+
+[tool.ruff.lint.per-file-ignores]
+"tests/**/*.py" = [
+  "S101", # asserts are fine in tests
+  "S311", # non-crypto randomness in tests
+  "D",    # ignore docstring requirements in tests
+]
+"**/__init__.py" = [
+  "D104", # package-level docstring optional
+]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
