--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,18 +38,36 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-22.04
-            target: x86_64
-          - runner: ubuntu-22.04
-            target: x86
-          - runner: ubuntu-22.04
-            target: aarch64
-          - runner: ubuntu-22.04
-            target: armv7
-          - runner: ubuntu-22.04
-            target: s390x
-          - runner: ubuntu-22.04
-            target: ppc64le
+          - {
+              runner: ubuntu-22.04,
+              target: x86_64,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: x86,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: aarch64,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: armv7,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: s390x,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: ppc64le,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -59,7 +77,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --interpreter ${{ matrix.platform.interpreter }}
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
@@ -74,14 +92,26 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-22.04
-            target: x86_64
-          - runner: ubuntu-22.04
-            target: x86
-          - runner: ubuntu-22.04
-            target: aarch64
-          - runner: ubuntu-22.04
-            target: armv7
+          - {
+              runner: ubuntu-22.04,
+              target: x86_64,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: x86,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: aarch64,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: ubuntu-22.04,
+              target: armv7,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -91,7 +121,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --interpreter ${{ matrix.platform.interpreter }}
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -106,10 +136,16 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: windows-latest
-            target: x64
-          - runner: windows-latest
-            target: x86
+          - {
+              runner: windows-latest,
+              target: x64,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+            }
+          - {
+              runner: windows-latest,
+              target: x86,
+              interpreter: "3.9 3.10 3.11 3.12 3.13 3.13t 3.14 3.14t"
+            }
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -120,7 +156,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --interpreter ${{ matrix.platform.interpreter }}
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -134,10 +170,16 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: macos-15
-            target: x86_64
-          - runner: macos-15
-            target: aarch64
+          - {
+            runner: macos-15,
+            target: x86_64,
+            interpreter: "3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+          }
+          - {
+            runner: macos-15,
+            target: aarch64,
+            interpreter: "3.10 3.11 3.12 3.13 3.13t 3.14 3.14t pypy3.10 pypy3.11"
+          }
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -147,7 +189,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --interpreter ${{ matrix.platform.interpreter }}
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
