--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [dependencies]
 ahash = "0.8.12"
 moka = { version = "0.12", features = ["sync"] }
-pyo3 = "0.26.0"
+pyo3 = { version = "0.26", features = ["generate-import-lib"] }
 
 [profile.release]
 lto = true
